objects/Related_Idea__c.object
<CustomObject><fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Posted_By__c</fullName>
        <label>Posted By</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Posted__c</fullName>
        <label>Posted</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipName>R00N4100000GiuqOEAR</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Votes__c</fullName>
        <label>Votes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Related Idea</label><nameField>
        <label>Related Idea</label>
        <type>Text</type>
    </nameField><pluralLabel>Related Ideas</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>